--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="favicon.ico" />
+    <meta name="description" content="Author: Jorg Bernhard Reske : Categoria: Web design, web Pages, Arte, Design, Web Creation Paint, Foto, Web Lay-out">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Nanum+Gothic&family=Pacifico&family=Raleway:wght@300;500&family=Satisfy&display=swap" rel="stylesheet"><link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Pacifico&family=Raleway:wght@300;500&family=Satisfy&display=swap" rel="stylesheet"><meta name="viewport" content="width=device-width, initial-scale=1" />
